@@ -18,6 +18,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class BookService {
+
     private final BookRepository bookRepository;
     private final BookDetailRepository bookDetailRepository;
 
@@ -25,7 +26,7 @@ public class BookService {
         return bookRepository.findAll()
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public BookDTO.Response getBookById(Long id) {
@@ -35,7 +36,7 @@ public class BookService {
     }
 
     public BookDTO.Response getBookByIsbn(String isbn) {
-        Book book = bookRepository.findByIdWithBookDetail(isbn)
+        Book book = bookRepository.findByIsbnWithBookDetail(isbn)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
         return BookDTO.Response.fromEntity(book);
     }
@@ -44,14 +45,14 @@ public class BookService {
         return bookRepository.findByAuthorContainingIgnoreCase(author)
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<BookDTO.Response> getBooksByTitle(String title) {
         return bookRepository.findByTitleContainingIgnoreCase(title)
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -79,9 +80,10 @@ public class BookService {
                     .publisher(request.getDetailRequest().getPublisher())
                     .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
                     .edition(request.getDetailRequest().getEdition())
+                    //연관관계 저장
                     .book(book)
                     .build();
-
+            //연관관계 저장
             book.setBookDetail(bookDetail);
         }
 
